Remember remotes and pull from them.